# mailer-api

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Cargo.toml  Dockerfile  README.md  build.rs  compose.yaml  db.example.env  docker-compose.yaml  mailer.example.env  package.json  tsconfig.json
.github/: dependabot.yaml
.github/workflows/: docker build.yaml  linter.yaml  pre-commit.yaml  security.yaml  tests.yaml
api/: .env.example  Cargo.toml
api/src/: main.rs
api/src/controllers/: mail.rs  mod.rs
api/src/schemas/: api.rs  api_state.rs  attachment.rs  mail.rs  mod.rs
api/src/services/: mail.rs  mod.rs
api/src/utils/: mod.rs  settings.rs
mailer/: package.json
mailer/src/: index.ts
mailer/src/models/: databaseModel.ts  loggerModel.ts  mailModel.ts  mailerModel.ts  migrationsModel.ts  serverModel.ts
mailer/src/models/schemas/: mailSchema.ts
mailer/src/proto/: mailer.proto
mailer/src/services/: mailerService.ts
migration/: Cargo.toml
migration/src/: m20220101_000001_create_table.rs
models/: Cargo.toml
models/src/: attachment.rs  errors.rs  lib.rs  mail.rs
proto/: mailer.proto
scheduler/: .dockerignore  .env.example  Cargo.toml
scheduler/src/: errors.rs  main.rs
scheduler/src/providers/: mod.rs  queue.rs  smtp.rs
scheduler/src/schemas/: mod.rs  state.rs
scheduler/src/services/: mail_manager.rs  mod.rs  smtp.rs
scheduler/src/utils/: mod.rs  settings.rs  utils.rs
src/: main.rs
src/models/: mailer.rs
