[package]
name = "mailer-api"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "app"
path = "./src/main.rs"

[dependencies]
prost = "0.12.3"
serde = { version = "1.0.194", features = ["derive"] }
tokio = { version = "1.35.1", features = ["full"] }
tonic = "0.10.2"

[build-dependencies]
tonic-build = "0.10.2"
