[package]
name = "api"
version = "1.0.0"
edition = "2021"

[[bin]]
name = "api"
path = "./src/main.rs"

[dependencies]
axum = { version = "0.7.8", default-features = true, features = [] }
base64 = { version = "0.22.1", default-features = true }
chrono = { version = "0.4.38", default-features = false, features = ["clock"] }
config = { version = "0.14.0", default-features = false, features = ["yaml"] }
mime_guess = { version = "2.0.5", default-features = false }
once_cell = { version = "1.20.2", default-features = false }
regex = { version = "1.11.1", default-features = false }
sea-orm = { version = "1.1.1", default-features = true, features = [
  "runtime-tokio-rustls",
  "sqlx-postgres",
] }
serde = { version = "1.0.215", default-features = false, features = ["derive"] }
serde_json = { version = "1.0.132", default-features = false }
tokio = { version = "1.41.1", default-features = false, features = [
  "macros",
  "rt-multi-thread",
] }
tracing = { version = "0.1.40", default-features = true }
tracing-subscriber = { version = "0.3.18", default-features = true, features = [
  "env-filter",
] }
uuid = { version = "1.11.0", default-features = false, features = ["v7"] }
validator = { version = "0.19.0", default-features = false, features = [
  "derive",
] }

[dependencies.models]
path = "../models"
