[package]
name = "migration"
version = "1.0.0"
edition = "2021"
publish = false

[lib]
name = "migration"
path = "src/lib.rs"

[dependencies]
async-std = { version = "1", features = ["attributes", "tokio1"] }

[dependencies.sea-orm-migration]
version = "1.1.1"
features = ["runtime-tokio-rustls", "sqlx-postgres"]
