[package]
name = "models"
version = "1.0.0"
edition = "2021"

[dependencies]
chrono = { version = "0.4.38", default-features = false }
lettre = { version = "0.11.10", default-features = false, features = [
  "builder",
  "hostname",
  "pool",
  "tokio1-rustls-tls",
  "smtp-transport",
] }
sea-orm = { version = "1.1.3", default-features = true, features = [
  "runtime-tokio-rustls",
  "sqlx-postgres",
] }
serde = { version = "1.0.215", default-features = false }
uuid = { version = "1.11.0", default-features = false }
validator = { version = "0.19.0", default-features = false, features = [
  "derive",
] }
